// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailedCouponTile should render correctly 1`] = `
<Styled(View)>
  <Styled(View)>
    <Styled(View)>
      <Styled(View)>
        <Styled(View)>
          <CouponIcon
            coupon={Object {}}
            labels={
              Object {
                "lbl_coupon_applyToBag": "apply",
                "lbl_coupon_couponUseBy": "use by",
                "lbl_coupon_couponValid": "valid",
                "lbl_coupon_detailsLink": "details",
                "lbl_coupon_expiringSoon": "expiring soon",
                "lbl_coupon_removeFromBag": "remove from bag",
                "lbl_coupon_viewPrint": "view & print",
              }
            }
          />
        </Styled(View)>
        <Styled(View)>
          <Styled(BodyCopy)
            accessibilityText=""
            color="gray.900"
            data-locator="accountoverview-myplacerewatdstile-rewardvalue"
            dataLocator=""
            fontFamily="secondary"
            fontSize="fs16"
            margin={null}
            numberOfLines={null}
            textAlign="center"
            textDecoration={null}
          />
        </Styled(View)>
      </Styled(View)>
      <Styled(View)>
        <BarcodeView
          displayValue={true}
          format="CODE128"
          height="50"
          width="1"
        />
      </Styled(View)>
      <Styled(View)>
        <View>
          <Styled(BodyCopy)
            accessibilityText=""
            data-locator="accountoverview-myplacerewatdstile-rewarduseby"
            dataLocator=""
            margin={null}
            numberOfLines={null}
            text="use by"
            textDecoration={null}
          />
          <Styled(BodyCopy)
            accessibilityText=""
            dataLocator=""
            margin={null}
            numberOfLines={null}
            text="undefined"
            textDecoration={null}
          />
        </View>
        <Styled(Anchor)
          accessibilityLabel=""
          anchorVariation="primary"
          color="gray.900"
          colorName={null}
          customStyle={Object {}}
          data-locator="my-rewards-program-details"
          fontSizeVariation="large"
          locator=""
          margins={null}
          onPress={[Function]}
          text="details"
          underline={true}
          visible={false}
        />
      </Styled(View)>
      <Styled(View)>
        <Styled(CustomButton)
          active={false}
          buttonVariation="fixed-width"
          color=""
          customStyle={Object {}}
          customTextStyle={null}
          disableButton={false}
          fill=""
          fullWidth=""
          iconColor="gray.800"
          iconName="chevron-down"
          iconSize="fs12"
          locator=""
          navigation={Object {}}
          onPress={[Function]}
          selected={false}
          selectedIcon="chevron-up"
          showIcon={false}
          text="view & print"
          theme={Object {}}
          url=""
        />
      </Styled(View)>
      <Styled(CustomButton)
        active={false}
        buttonVariation="fixed-width"
        color="#fff"
        customStyle={Object {}}
        customTextStyle={null}
        disableButton={true}
        fill="BLUE"
        fullWidth=""
        iconColor="gray.800"
        iconName="chevron-down"
        iconSize="fs12"
        locator=""
        navigation={Object {}}
        onPress={[Function]}
        selected={false}
        selectedIcon="chevron-up"
        showIcon={false}
        text="apply"
        theme={Object {}}
        url=""
      />
    </Styled(View)>
  </Styled(View)>
</Styled(View)>
`;

exports[`DetailedCouponTile should render correctly for applied coupon 1`] = `
<Styled(View)>
  <Styled(View)>
    <Styled(Styled(View)) />
    <Styled(Styled(View))>
      <Styled(View)>
        <Styled(ImageComp)
          alt=""
          height="25px"
          host=""
          source={
            Object {
              "testUri": "../../../../core/src/assets/white-bag.png",
            }
          }
          url=""
          width="25px"
        />
      </Styled(View)>
      <Styled(View)>
        <Styled(BodyCopy)
          accessibilityText=""
          color="white"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs16"
          fontWeight="extrabold"
          margin={null}
          numberOfLines={null}
          text="lbl_common_applied_to_bag"
          textAlign="center"
          textDecoration={null}
        />
      </Styled(View)>
    </Styled(Styled(View))>
    <Styled(View)>
      <Styled(View)>
        <Styled(View)>
          <CouponIcon
            coupon={
              Object {
                "status": "applied",
              }
            }
            labels={
              Object {
                "lbl_coupon_applyToBag": "apply",
                "lbl_coupon_couponUseBy": "use by",
                "lbl_coupon_couponValid": "valid",
                "lbl_coupon_detailsLink": "details",
                "lbl_coupon_expiringSoon": "expiring soon",
                "lbl_coupon_removeFromBag": "remove from bag",
                "lbl_coupon_viewPrint": "view & print",
              }
            }
          />
        </Styled(View)>
        <Styled(View)>
          <Styled(BodyCopy)
            accessibilityText=""
            color="white"
            data-locator="accountoverview-myplacerewatdstile-rewardvalue"
            dataLocator=""
            fontFamily="secondary"
            fontSize="fs16"
            margin={null}
            numberOfLines={null}
            textAlign="center"
            textDecoration={null}
          />
        </Styled(View)>
      </Styled(View)>
      <Styled(View)>
        <BarcodeView
          displayValue={true}
          format="CODE128"
          height="50"
          width="1"
        />
        <Styled(Styled(View)) />
      </Styled(View)>
      <Styled(View)>
        <View>
          <Styled(BodyCopy)
            accessibilityText=""
            data-locator="accountoverview-myplacerewatdstile-rewarduseby"
            dataLocator=""
            margin={null}
            numberOfLines={null}
            text="use by"
            textDecoration={null}
          />
          <Styled(BodyCopy)
            accessibilityText=""
            dataLocator=""
            margin={null}
            numberOfLines={null}
            text="undefined"
            textDecoration={null}
          />
        </View>
        <Styled(Anchor)
          accessibilityLabel=""
          anchorVariation="primary"
          color="gray.900"
          colorName={null}
          customStyle={Object {}}
          data-locator="my-rewards-program-details"
          fontSizeVariation="large"
          locator=""
          margins={null}
          onPress={[Function]}
          text="details"
          underline={true}
          visible={false}
        />
        <Styled(Styled(View)) />
      </Styled(View)>
      <Styled(View)>
        <Styled(CustomButton)
          active={false}
          buttonVariation="fixed-width"
          color=""
          customStyle={Object {}}
          customTextStyle={null}
          disableButton={false}
          fill=""
          fullWidth=""
          iconColor="gray.800"
          iconName="chevron-down"
          iconSize="fs12"
          locator=""
          navigation={Object {}}
          onPress={[Function]}
          selected={false}
          selectedIcon="chevron-up"
          showIcon={false}
          text="view & print"
          theme={Object {}}
          url=""
        />
        <Styled(Styled(View)) />
      </Styled(View)>
      <Styled(CustomButton)
        active={false}
        buttonVariation="fixed-width"
        color=""
        customStyle={Object {}}
        customTextStyle={null}
        disableButton={false}
        fill=""
        fullWidth=""
        iconColor="gray.800"
        iconName="chevron-down"
        iconSize="fs12"
        locator=""
        navigation={Object {}}
        onPress={[Function]}
        selected={false}
        selectedIcon="chevron-up"
        showIcon={false}
        text="remove from bag"
        theme={Object {}}
        url=""
      />
    </Styled(View)>
  </Styled(View)>
</Styled(View)>
`;

exports[`DetailedCouponTile should render expiring soon notification if coupon isExpiring is true 1`] = `
<Styled(View)>
  <Styled(View)>
    <Styled(Styled(View))>
      <Styled(BodyCopy)
        accessibilityText=""
        color="white"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs12"
        margin={null}
        numberOfLines={null}
        text="expiring soon"
        textAlign="center"
        textDecoration={null}
      />
    </Styled(Styled(View))>
    <Styled(View)>
      <Styled(View)>
        <Styled(View)>
          <CouponIcon
            coupon={
              Object {
                "isExpiring": true,
              }
            }
            labels={
              Object {
                "lbl_coupon_applyToBag": "apply",
                "lbl_coupon_couponUseBy": "use by",
                "lbl_coupon_couponValid": "valid",
                "lbl_coupon_detailsLink": "details",
                "lbl_coupon_expiringSoon": "expiring soon",
                "lbl_coupon_removeFromBag": "remove from bag",
                "lbl_coupon_viewPrint": "view & print",
              }
            }
          />
        </Styled(View)>
        <Styled(View)>
          <Styled(BodyCopy)
            accessibilityText=""
            color="gray.900"
            data-locator="accountoverview-myplacerewatdstile-rewardvalue"
            dataLocator=""
            fontFamily="secondary"
            fontSize="fs16"
            margin={null}
            numberOfLines={null}
            textAlign="center"
            textDecoration={null}
          />
        </Styled(View)>
      </Styled(View)>
      <Styled(View)>
        <BarcodeView
          displayValue={true}
          format="CODE128"
          height="50"
          width="1"
        />
      </Styled(View)>
      <Styled(View)>
        <View>
          <Styled(BodyCopy)
            accessibilityText=""
            data-locator="accountoverview-myplacerewatdstile-rewarduseby"
            dataLocator=""
            margin={null}
            numberOfLines={null}
            text="use by"
            textDecoration={null}
          />
          <Styled(BodyCopy)
            accessibilityText=""
            dataLocator=""
            margin={null}
            numberOfLines={null}
            text="undefined"
            textDecoration={null}
          />
        </View>
        <Styled(Anchor)
          accessibilityLabel=""
          anchorVariation="primary"
          color="gray.900"
          colorName={null}
          customStyle={Object {}}
          data-locator="my-rewards-program-details"
          fontSizeVariation="large"
          locator=""
          margins={null}
          onPress={[Function]}
          text="details"
          underline={true}
          visible={false}
        />
      </Styled(View)>
      <Styled(View)>
        <Styled(CustomButton)
          active={false}
          buttonVariation="fixed-width"
          color=""
          customStyle={Object {}}
          customTextStyle={null}
          disableButton={false}
          fill=""
          fullWidth=""
          iconColor="gray.800"
          iconName="chevron-down"
          iconSize="fs12"
          locator=""
          navigation={Object {}}
          onPress={[Function]}
          selected={false}
          selectedIcon="chevron-up"
          showIcon={false}
          text="view & print"
          theme={Object {}}
          url=""
        />
      </Styled(View)>
      <Styled(CustomButton)
        active={false}
        buttonVariation="fixed-width"
        color="#fff"
        customStyle={Object {}}
        customTextStyle={null}
        disableButton={true}
        fill="BLUE"
        fullWidth=""
        iconColor="gray.800"
        iconName="chevron-down"
        iconSize="fs12"
        locator=""
        navigation={Object {}}
        onPress={[Function]}
        selected={false}
        selectedIcon="chevron-up"
        showIcon={false}
        text="apply"
        theme={Object {}}
        url=""
      />
    </Styled(View)>
  </Styled(View)>
</Styled(View)>
`;
